--- a/app/src/main/res/layout-land/activity_quiz.xml
+++ b/app/src/main/res/layout-land/activity_quiz.xml
@@ -30,19 +30,36 @@
 
     </LinearLayout>
 
-        <ImageButton
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical|center_horizontal"
+        android:layout_marginTop="40dp"
+        android:orientation="horizontal">
+
+        <Button
             android:id="@+id/previous_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/arrow_left" />
+            android:text="@string/previous_button"
+            android:drawableLeft="@drawable/arrow_left"/>
 
-        <ImageButton
+        <Button
             android:id="@+id/next_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|right"
-            android:src="@drawable/arrow_right" />
+            android:text="@string/next_button"
+            android:drawableRight="@drawable/arrow_right"/>
 
+    </LinearLayout>
 
+    <Button
+        android:id="@+id/cheat_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal|center_vertical"
+        android:layout_marginTop="80dp"
+        android:text="@string/cheat_button"/>
 
 </FrameLayout>
